<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/feed_fragment">

    <fragment
        android:id="@+id/feed_fragment"
        android:name="ru.netology.myrecipe.ui.FeedFragment"
        android:label="@string/feed_fragment"
        tools:layout="@layout/feed_fragment">

        <action
            android:id="@+id/action_feed_fragment_to_recipeCardFragment"
            app:destination="@id/recipe_card_fragment" />
        <action
            android:id="@+id/action_feed_fragment_to_recipe_content_fragment"
            app:destination="@id/recipe_content_fragment" />

        <action
            android:id="@+id/action_feed_fragment_to_filter_fragment"
            app:destination="@id/filter_fragment" />
    </fragment>

    <fragment
        android:id="@+id/favorite_fragment"
        android:name="ru.netology.myrecipe.ui.FavoriteFragment"
        android:label="@string/favorite_recipes"
        tools:layout="@layout/favorite_fragment">

        <action
            android:id="@+id/action_favorite_fragment_to_recipeCardFragment"
            app:destination="@id/recipe_card_fragment" />
        <action
            android:id="@+id/action_favorite_fragment_to_recipe_content_fragment"
            app:destination="@id/recipe_content_fragment" />

        <action
            android:id="@+id/action_favorite_fragment_to_filter_fragment"
            app:destination="@id/filter_fragment" />

    </fragment>

    <fragment
        android:id="@+id/filter_fragment"
        android:name="ru.netology.myrecipe.ui.FilterFragment"
        android:label="@string/filters"
        tools:layout="@layout/filter_fragment">

    </fragment>

    <fragment
        android:id="@+id/recipe_content_fragment"
        android:name="ru.netology.myrecipe.ui.RecipeContentFragment"
        android:label="@string/recipe_content_fragment"
        tools:layout="@layout/recipe_content_fragment">
        <argument
            android:name="initialTitle"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="initialAuthor"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="initialCategory"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true"/>
        <argument
            android:name="initialSteps"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true"/>


        <action
            android:id="@+id/action_recipe_content_fragment_to_feed_fragment"
            app:destination="@id/feed_fragment" />


    </fragment>



    <fragment
        android:id="@+id/recipe_card_fragment"
        android:name="ru.netology.myrecipe.ui.RecipeCardFragment"
        tools:layout="@layout/recipe_card_fragment">
        <argument
            android:name="recipeId"
            app:argType="integer"
            app:nullable="false" />
        <action
            android:id="@+id/action_recipeCardFragment_to_recipeContentFragment"
            app:destination="@id/recipe_content_fragment" />
        <action
            android:id="@+id/action_recipeCardFragment_to_feedFragment"
            app:destination="@id/feed_fragment" />
    </fragment>
</navigation>