<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/common_spacing"
    tools:context=".ui.RecipeContentFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_recipe_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:icon="@drawable/ic_save_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/save_recipe_button"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/add_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_info_photo"
                android:textColor="@android:color/holo_purple"
                android:textSize="16pt" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_recipe">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/title_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"

                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category_recipe">

                <AutoCompleteTextView
                    android:id="@+id/edit_category_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:simpleItems="@array/category_items"
                    tools:ignore="LabelFor,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            <com.google.android.material.textfield.TextInputLayout-->
            <!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:hint="@string/steps_recipe">-->

            <!--                <com.google.android.material.textfield.TextInputEditText-->
            <!--                    android:id="@+id/edit_steps_recipe"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    app:endIconMode="clear_text"-->
            <!--                    tools:ignore="TextContrastCheck" />-->

            <!--            </com.google.android.material.textfield.TextInputLayout>-->


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_step_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_step" />

                <!--            <com.google.android.material.button.MaterialButton-->
                <!--                android:id="@+id/add_photo_button"-->
                <!--                android:layout_width="wrap_content"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:text="@string/add_photo" />-->


            </LinearLayout>


            <!--            <ImageView-->
            <!--                android:id="@+id/image_step"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="top"-->
            <!--                android:adjustViewBounds="true"-->
            <!--                android:contentDescription="@string/step_photo"-->
            <!--                android:scaleType="fitStart"-->
            <!--                tools:src="@drawable/recipe_picture" />-->

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/stepsRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/add_step_button"
                            tools:layout_editor_absoluteX="0dp"
                            tools:listitem="@layout/step" />



        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>